Need to stop messing around with styles so much. It takes too long and isn't a good show of your abilities if you a. don't just want to be a front-end dev, and b. are trying to demonstrate a breadth of different abilities

--- a/src/components/AppSidebar/app_sidebar.module.scss
+++ b/src/components/AppSidebar/app_sidebar.module.scss
@@ -1,77 +1,4 @@
-
-
-/* Adapted from Paulina Hetman code */
-@mixin moveInGrid($cols, $numElements) {
-  $rows: ceil(calc($numElements / $cols));
-  .sidebar_select_grid {
-    & > .sidebar_item:last-of-type:after,
-    & > .sidebar_item:last-of-type:before {
-      left: 100% * (($cols - $numElements) % $cols);
-      transform: translateY(-100% * calc(($rows - 1) / 2)); //would be translate 3d with appropriate x calculation
-    }
-    @for $i from 1 through $numElements - 1 {
-      $x: ($cols - $i) % $cols;
-      $y: $rows - floor(calc(( ($i - 1) / $cols ))) - 1;
-      @debug "x & y: #{$x}, #{$y}";
-      & > .sidebar_item:nth-of-type(#{$i}):hover ~ .sidebar_item:last-of-type:after,
-      & > .sidebar_item:nth-of-type(#{$i}):hover ~ .sidebar_item:last-of-type:before {
-        transform: translateY(-$y * 100%); //would be translate3d but that wasn't working
-        opacity: 1;
-        width: 100%;
-        background-color: rgba(200, 200, 250, 0.1);
-      }
-
-      & > .sidebar_item:last-of-type:hover:after,
-      & > .sidebar_item:last-of-type:hover:before {
-        transform: translateY(0%);
-        opacity: 1;
-        width: 100%;
-        background-color: rgba(200, 200, 250, 0.1);
-      }
-    }
-  }
-}
-
-.sidebar_select_grid {
-  & > .sidebar_item {
-    &:last-of-type:after,
-    &:last-of-type:before {
-      content: "";
-      position: absolute;
-      width: 0%;
-      height: 100%;
-      top: 0;
-      background-color: transparent;
-      opacity: 0;
-      transition: 1s;
-    }
-  }
-}
-
-.pro_menu_item {
-  width: inherit;
-}
-
-/*.pro-menu-item {
-  &:hover {
-    --gradient_width: 100%;
-  }
-
-  &::before {
-    content: "";
-    position: absolute;
-    left: 0px;
-    top: 0px;
-    height: 100%;
-    background: linear-gradient(to right, #23a6d5 var(--light_blue_percent), #4fb8dd);
-    width: var(--gradient_width, 0%);
-    transition: width 800ms ease;
-    z-index: 0;
-  } 
-} */
-
 .SidebarArea {
-
   &__BurgerArea {
     display: flex;
     height: auto;
@@ -79,27 +6,38 @@
     color: blue;
     padding-top: 10px;
 
-    &__BurgerIcon {
-
-    }
-
     &__BurgerText {
       margin-left: 10px;
       font-family: 'Roboto';
     }
   }
 
+  @keyframes iconShake {
+    0% { transform: rotateZ(0deg); }
+    25% { transform: rotateZ(-15deg); }
+    50% { transform: rotateZ(15deg); }
+    75% { transform: rotateZ(-15deg); }
+    100% { transform: rotateZ(0deg); }
+  }
+
   &__Menu {
-    display: grid;
     &__SelectableMenuItem {
       display: flex;
       flex-direction: column;
+      position: relative;
       justify-content: center;
       width: 100%;
-      height: 100%;
-      margin-top: 10px;
-      margin-bottom: 10px;
+      height: auto;
+      padding-top: 5px;
+      padding-bottom: 5px;
       cursor: pointer;
+      background-size: 500% 100%;
+      background-position: 100% 0;
+      transition: background-position 0.3s ease;
+      background-image: linear-gradient(to right, #207aa1 0%, #1c85aa) !important;
+      &:hover {
+        background-position: 0% 0;
+      }
       &__Layout {
         display: grid;
         width: inherit;
@@ -110,6 +48,9 @@
       &__Icon {
         display: flex;
         justify-content: center;
+        &:hover {
+          animation: iconShake 0.3s cubic-bezier(.36,.07,.19,.97) both;
+        }
       }
       &__TextContainer {
         display: flex;
@@ -152,18 +93,20 @@
           color: rgb(181, 177, 177);
         }
 
+        &__NumberTerminator {
+          color: rgb(181, 177, 177);
+        }
+
         &__Text {
           transition: all 0.2s ease-in;
           cursor: pointer;
-          &:hover {
-            margin-left: 6px;
+          &.hover_enabled {
+            &:hover {
+              margin-left: 6px;
+            }
           }
         }
       }
     }
   }
 }
-
-
-
-@include moveInGrid(1, 4);
